fix: bug with overlapping fullscreenhero and button

--- a/app/globals.css
+++ b/app/globals.css
@@ -640,7 +640,7 @@ body::-webkit-scrollbar-thumb:hover {
   .hero-scroll-button {
     position: absolute;
     z-index: 20;
-    bottom: var(--space-2);
+    bottom: calc(var(--space-2) + env(safe-area-inset-bottom));
     left: 50%;
     transform: translateX(-50%);
     display: inline-flex;
